# kestrel-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPRINT.md  TEST_REVIEW.md  rust_files.txt
.agent-contexts/: agent-a.md  agent-b.md  agent-c.md
.cargo/: config.toml
.claude-flow/data/: pending-insights.jsonl
.claude-flow/sessions/: session-1778391330699.json  session-1778392301356.json  session-1778393049966.json  session-1778393739572.json  session-1778394217576.json  session-1778411444261.json  session-1778412570641.json  session-1778414041115.json
.github/workflows/: ci.yml  release.yml
.omc/sessions/: f5fba0e2-c32e-4bce-9587-3b2c12d5524d.json
crates/kestrel-agent/: Cargo.toml
crates/kestrel-config/: Cargo.toml  README.md
crates/kestrel-config/examples/: migrate.rs
crates/kestrel-config/src/: crypto.rs  documented.rs  lib.rs  loader.rs  paths.rs  platform.rs  python_migrate.rs  schema.rs  validate.rs
crates/kestrel-test-utils/: Cargo.toml
crates/kestrel-test-utils/src/: lib.rs  mock_check.rs  mock_memory.rs  mock_provider.rs
docs/: 01-blue-hat-architecture.md  02-white-hat-specification.md  03-red-hat-critique.md  04-black-hat-risks.md  05-yellow-hat-value.md  06-green-hat-design.md  tantivy-memory-test-report.md  task-black-phase2.md  task-black.md  task-blue-phase2.md  task-blue.md  task-green-phase2.md  task-green.md  task-red-phase2.md  task-red.md  task-white-phase2.md  task-white.md  task-yellow-phase2.md  task-yellow.md
src/: main.rs
tests/: e2e_integration_test.rs  full_integration_test.rs  pipeline_e2e.rs
(+174 files in other folders)
