[package]
name = "kestrel-config"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-core = { path = "../kestrel-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
dirs = "5"
tracing = { workspace = true }
ipnet = "2"
aes-gcm = { workspace = true }
argon2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
clap = { workspace = true }
